--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,216 @@
     color: var(--main-color);
 }
 
+/* header */
 body {
     display: flex;
     justify-content: center;
+    width: 100%;
 }
+
+header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+header img {
+    width: 100px;
+    margin: 30px 0 0 50px
+}
+
+nav a {
+    margin: 0 30px;
+    color: black;
+    text-decoration: none;
+    padding-top: 10px;
+}
+
+nav a:hover {
+    color: var(--main-color);
+    border-top: 2px solid var(--main-color);
+}
+
+h1 {
+    display: flex;
+    flex-wrap: wrap;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    /*width: 1340px;*/
+    height: 26px;
+    margin: 60px 50px 0 50px
+}
+
+.sous-titre {
+    height: 19px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    margin: 0 50px 0 50px;
+    padding-top: 8px;
+}
+
+/* header */
+
+/* Barre de recherche */
+
+.search-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 35px 0 50px 50px;
+    /*width: 385px;*/
+    height: 50px;
+    border: 1px solid #F2F2F2;
+    border-radius: 15px 0px 0px 15px ;
+    background: #FFFFFF;
+}
+
+.search-bar i {
+    display: flex;
+    width: 30px;
+    height: 50px;
+    background-color: #F2F2F2;
+    border-radius: 15px 0px 0px 15px;
+    align-items: center;
+    color: #000000;
+    padding-left:20px;
+}
+
+input[type="text"] {
+    background-color: white;
+    border: none;
+    font-size: 16px;
+    width: 300px;
+    border-radius: 20px;
+    border: none;
+}
+
+button[type="submit"] {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 15px 16px;
+    gap: 10px;
+    width: 132px;
+    height: 52px;
+    background: #0065FC;
+    border: 1px solid #0065FC;
+    border-radius: 0px 15px 15px 0px;
+}
+
+button {
+    width: 100px;
+    height: 21px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+input:focus {
+    outline: none;
+}
+
+::placeholder {
+    font-weight: bold;
+    color: black;
+    padding-left: 15px;
+}
+
+
+
+/* barre de recherche */
+
+/* filtres */
+
+
+.filter-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    gap: 15px;
+    /*width: 758px;*/
+    height: 50px;
+    flex: none;
+    order: 2;
+    z-index: 2;
+    text-align: center;
+    margin: 40px 0 30px 50px;
+}
+
+.filter-title {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #000000;
+    flex: none;
+    width: 54px;
+    height: 21px;
+}
+
+.filter-list {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.filter-list div {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 4px 19px;
+    gap: 10px;
+    height: 50px;
+    border: 2px solid #D9D9D9;
+    border-radius: 25px;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 20px;
+}
+
+.filter-list div:hover {
+    background-color: var(--filter-bg-color);
+    cursor: pointer;
+    
+}
+/* filtres */
+
+/* info-bar*/
+
+.info-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 37px 50px 37.5px 84px;
+    gap: 10px;   
+}
+
+.info-bar i {
+    display: flex;
+    justify-content: center;
+    border-radius: 25px;
+    border: 1px solid #D9D9D9;
+    width: 20px;
+    height: 20px;
+}
+
+/*info-bar*/
 
 .main-container {
     width: 100%;
@@ -35,6 +241,16 @@ body {
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.card-hebergement {
+    padding: 0px 0px 15px;
+    gap: 4px;
+    width: 250px;
+    height: 207px;
+    background: #FFFFFF;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
 }
 
 .card img {
@@ -69,6 +285,58 @@ body {
 /****** Hebergements ***********/
 .hebergements {
     width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 30px;
+}
+
+.hebergements-cards {
+    /*width: 871px;*/
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-right: 10px;
+    gap: 30px;
+    margin-right: 20px;
+}
+
+
+.hebergements-cards img {
+    box-sizing: border-box;
+    width: 250px;
+    height: 124px;
+    border: 5px solid #FFFFFF;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.hebergements-cards .card-title {
+    margin-left: 15px;
+    margin-top: 4px;
+}
+
+.hebergements-cards .card-subtitle{
+    margin-top: 8px;
+    margin-left: 15px;
+}
+
+.hebergements-cards .card-rating {
+    margin-left: 15px;
+    margin-top: 8px;
+}
+
+.title-filter {
+    /*width: 811px;*/
+    height: 21px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    color: #000000;
 }
 
 /****** Populaires ***********/
@@ -106,6 +374,7 @@ body {
 .populaires-cards .card-title {
     margin-top: 10px;
     margin-bottom: 4px;
+    margin-inline-start: 1px;
 }
 
 .populaires-cards .card-subtitle {
@@ -118,6 +387,59 @@ body {
 
 
 
+/* Activités à Marseille */
+.activites-a-marseille {
+    margin-bottom: 200px;
+}
+.activites-marseille-title {
+    height: 30px;
+    margin-top: 65px ;
+}
+
+.card-activites-a-marseille {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 30px;
+}
+
+.card-activites-a-marseille img {
+    border-radius: 20px 20px 0px 0px;
+    width: 297px;
+    height: 380px;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+}
+
+.card-activites {
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+    background: #FFFFFF;
+    border-radius: 20px;    
+}
+
+.card-title {
+    margin-inline-start: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+/* Footer */
+
+footer {
+    background-color: #F2F2F2;
+    display: flex;
+    flex-direction: row;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-left: 30px;  
+}
+
+footer .bloc-footer {
+    display: flex;
+    flex-wrap: wrap;
+   padding: 20px;
+    
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
@@ -154,9 +476,94 @@ body {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+     .main-container {
+        margin: 0 auto;
+     }
+     
+     .card-activites-a-marseille {
+        max-width: 100%;
+        width: 864px;
+        height: 270px;
+     }
+
+     .card-activites-a-marseille img {
+        width: 205px;
+        height: 270px;
+     }
+
+     .card-title {
+        margin-inline-start: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;  
+     }
+
+     
+
+     
 }
+
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
     /* ... */
+
+    header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    width: 375px;
+    height: 115px;
+    }
+
+
+    h1 {
+        width: 335px;
+        height: 52px;
+    }
+
+    .sous-titre {
+        width: 335px;
+        height: 19px;
+    }
+
+    .search-bar {
+        width: 300px;
+    }
+    input[type="text"] {
+        width: 300px;
+        height: 49px;
+    }
+    button[type="submit"] {
+        
+    }
+
+    .filter-bar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+    width: 350px;
+    height: 161px;
+    }
+
+    .info-bar {
+    width: 350px;
+    height: 38px;
+    }
+
+    .hebergements-cards {
+
+    }
+
+    .activites-a-marseille {
+    
+    }
+
+
+
+
+
 }
